2005-04-22  Stefan Kost  <ensonic@users.sf.net>

	* gobject/Makefile.am:
	* gobject/gobject-docs.sgml:
	* gobject/tut_gobject.xml:
	* gobject/tut_gsignal.xml:
	* gobject/tut_gtype.xml:
	* gobject/tut_howto.xml:
	* gobject/tut_intro.xml:
	* gobject/tut_tools.xml:
	merged in docs form the gobject tutorial

2005-03-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/arrays_pointer.sgml: Clarify the docs for
	g_ptr_array_free and g_ptr_array_remove_range.  (#170148, 
	#170149, Jared Lash)

2005-03-29  Tor Lillqvist  <tml@novell.com>

	* glib/tmpl/spawn.sgml: Add Win32 warnings regarding the child
	setup function.

2005-03-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/memory.sgml: Document g_try_new, g_try_new0 
	and g_try_renew, g_try_malloc0.

2005-03-20  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gparamspec.sgml: Document G_PARAM_SPEC_STATIC_
	flags.

2005-03-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/macros_misc.sgml: Document G_GNUC_NULL_TERMINATED.

2005-03-07  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gtype.sgml:
	* gobject/tmpl/param_value_types.sgml:
	* gobject/tmpl/gparamspec.sgml: Apply patches by
	Stefan Kost to document naming restrictions. (#167614)

2005-02-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/option.sgml: Fix a typo.  (#166985)

2005-02-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add g_listenv.

2005-02-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/linked_lists_double.sgml: 
	* glib/tmpl/linked_lists_single.sgml: Add a note 
	regarding inefficiency of repeated appends. (#166271,
	Olivier Sessink)

2005-02-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/quarks.sgml: Add a warning against
	using g_quark_from_static_string() in dynamically
	loaded modules. 

2005-02-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/misc_utils.sgml: 
	* glib/tmpl/hash_tables.sgml: Move some doc 